Fix relative spacing

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -139,20 +139,20 @@ footer {
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
-.user-profile { position: relative; float: left; width: 28%; margin-right: 4%; text-align: center;
+.user-profile { position: fixed; float: left; width: 10%; margin-right: 4%; text-align: center;
   & > * { display: block; }
   .avatar { max-width: 140px; max-height: 140px; border-radius: 50%; margin: 0 auto 25px; }
-  .my-name { font-size: 24px; font-weight: 700; line-height: 30px; color: white; }
+  .my-name { font-size: 24px; font-weight: 700; line-height: 30px; color: black; }
   .my-job-title { font-size: 14px; font-weight: 300; margin: 5px 0 0; }
   .mainmenu { margin: 40px 0; text-align: center;
     a { display: block; max-width: 300px; margin: 0 auto; padding: 15px 0; border: 1px solid lightgrey; background:#fcfcfc; box-shadow: 0 2px 3px rgba(black,.05);
       &:hover, &.active { background: darken(#fcfcfc, 1%); border-left: 4px solid lightgrey; }
     }
   }
-  .about-me { font-size: 16px; line-height: 26px; margin: 30px 0 0; color: lightgrey; }
+.about-me { font-size: 16px; line-height: 26px; margin: 30px 0 0; color: black; }
   ul { font-size: 0; margin: 25px 0 0;
     li { display: inline-block; margin: 5px;
-      a { position: relative; display: block; width: 40px; height: 40px; line-height: 40px; background: orange; border-radius: 50%;
+      a { position: relative; display: block; width: 40px; height: 40px; line-height: 40px; background: black; border-radius: 50%;
         &:hover { background: firebrick; }
         svg { display: inline-block; vertical-align: middle;
           * { fill: white;  }
